thule-authentication-service/k8s/cit.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thule-authentication-service
  namespace: thule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thule-authentication-service
      namespace: thule
  template:
    metadata:
      labels:
        app: thule-authentication-service
        namespace: thule
    spec:
      serviceAccountName: thule-authentication-service-account
      containers:
        - name: thule-authentication-service
          image: jboss/keycloak
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /auth
              port: service-port
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              name: service-port
          readinessProbe:
            httpGet:
              path: /auth
              port: service-port
            periodSeconds: 30
            timeoutSeconds: 10
        - name: mysql-authentication-service
          image: mysql:5.7
          ports:
            - containerPort: 3306
      hostAliases:
        - ip: 192.168.0.102
          hostnames:
            - pooh
        - ip: 192.168.0.104
          hostnames:
            - piglet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-authentication-service"
  name: thule-authentication-service-ingress
  namespace: thule
spec:
  rules:
    - host: piglet
      http:
        paths:
          - path: /thule-authentication-service(/|$)(.*)
            backend:
              serviceName: thule-authentication-service
              servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: thule-authentication-service
  namespace: thule
  annotations:
    # Spring Boot Admin metadata
    health.path: /
    management.context-path: /realms/master/.well-known/openid-configuration/
    service-path: /auth/
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: thule-authentication-service
    namespace: thule
